# fafo

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  architecture.md  bugs.md  cluster.sh  demo.sh  fafo  marketing.html  plan.md  post.md  pubnub-domination-plan.md
clients/: fafo.py  fafo.ts
crashes/: mine-config.json
deploy/: package-lock.json  package.json  wrangler.jsonc
deploy/src/: index.ts
src/: api.rs  cluster.rs  delta.rs  grants.rs  lib.rs  limits.rs  main.rs  object.rs  objlog.rs  r2.rs  rpc.rs  sim.rs  store.rs  wills.rs  worker.rs
