[package]
name = "fafo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
futures = "0.3.32"
hmac = "0.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "json"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
